# website-base

./: .codespellrc  .gitignore  CNAME  Cargo.toml  README.md  index.html  package-lock.json
.github/workflows/: gh-pages-deploy.yml
src/: lib.rs  main.rs  models.rs
src/components/: counter_btn.rs  footer.rs  hero.rs  mod.rs  project_block.rs  project_card.rs
src/pages/: home.rs
