[package]
name = "website"
version = "0.1.0"
edition = "2021"
authors = ["Steven Guido <stevenrguido@gmail.com>"]

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
